--- a/.github/workflows/publish-prettier-config-npm-package.yml
+++ b/.github/workflows/publish-prettier-config-npm-package.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Build and push image
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@master
         with:
