--- a/.github/workflows/publish-prettier-config-npm-package.yml
+++ b/.github/workflows/publish-prettier-config-npm-package.yml
@@ -9,6 +9,7 @@ jobs:
     name: Build and push image
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@master
         with:
           version: 12
