--- a/.github/workflows/publish-prettier-config-npm-package.yml
+++ b/.github/workflows/publish-prettier-config-npm-package.yml
@@ -5,15 +5,37 @@ on:
       - main
 
 jobs:
-  build:
+  publish:
     name: Build and push image
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/setup-node@master
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          version: 12
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
-      - uses: shawnbot/npm-publish-action@master
+      - run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+
+          
+# name: publish-prettier-config-npm-package
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     name: Build and push image
+#     runs-on: ubuntu-20.04
+#     steps:
+#       - uses: actions/setup-node@master
+#         with:
+#           version: 12
+#           registry-url: 'https://registry.npmjs.org'
+#       - uses: shawnbot/npm-publish-action@master
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
