--- a/.github/workflows/publish-prettier-config-npm-package.yml
+++ b/.github/workflows/publish-prettier-config-npm-package.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm publish --provenance --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
           
 # name: publish-prettier-config-npm-package
