--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "base-prettier-configs-module",
-  "version": "0.0.2",
+  "name": "@truequality/base-prettier-configs-module",
+  "version": "0.1.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
